Fix naming and allow for value updates over time

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Carman Smart Metering Credentials
+# Carma Smart Metering Credentials
 USERNAME=your_meter_number_here
 PASSWORD=your_password_here
 
