--- a/home_assistant_config.yaml
+++ b/home_assistant_config.yaml
@@ -1,4 +1,4 @@
-# Home Assistant Configuration for Carman Power Consumption
+# Home Assistant Configuration for Carma Power Consumption
 # Add this to your Home Assistant configuration.yaml file
 
 # REST Sensors for Power Consumption Data
