--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   power-api:
     build: .
-    container_name: carman-power-api
+    container_name: carma-power-api
     restart: unless-stopped
     ports:
       - "5000:5000"
